--- a/colorfulSquare.html
+++ b/colorfulSquare.html
@@ -58,16 +58,15 @@
         function Choice(elem) {
             var bckgrnd = document.getElementById('body');
             
-            if (elem.id == "1st") {
-                bckgrnd.style.backgroundColor = "orchid";
-            } else if (elem.id == "2nd") {
-                bckgrnd.style.backgroundColor = "electric blue";
-            } else if (elem.id == "3rd") {
-                bckgrnd.style.backgroundColor = "mint green";
-            } else if (elem.id == "4th") {
-                bckgrnd.style.backgroundColor = "pastel red";
+            if (elem.id == "first") {
+                bckgrnd.style.backgroundColor = "#D39EFC";
+            } else if (elem.id == "second") {
+                bckgrnd.style.backgroundColor = "#AED6F1";
+            } else if (elem.id == "third") {
+                bckgrnd.style.backgroundColor = "#B5FC9E";
+            } else if (elem.id == "fourth") {
+                bckgrnd.style.backgroundColor = "#FC9F9E";
             }
-            console.log("hi");
         };
 
     </script>
